fix download spacing issue

--- a/src/app/document-card/document-card.component.css
+++ b/src/app/document-card/document-card.component.css
@@ -880,7 +880,7 @@ background-color:#EBC03F !important;
   left: auto;
   right: 10px;
   height: auto;
-  width: 103px;
+  width: 66px;
   text-align: right;
   padding: 0px;
   margin-bottom: 0px;
